--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "metadata": {
     "scrolled": true
    },
@@ -11,98 +11,186 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                age        height          income\n",
-      "count  59946.000000  59943.000000    59946.000000\n",
-      "mean      32.340290     68.295281    20033.222534\n",
-      "std        9.452779      3.994803    97346.192104\n",
-      "min       18.000000      1.000000       -1.000000\n",
-      "25%       26.000000     66.000000       -1.000000\n",
-      "50%       30.000000     68.000000       -1.000000\n",
-      "75%       37.000000     71.000000       -1.000000\n",
-      "max      110.000000     95.000000  1000000.000000\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 59946 entries, 0 to 59945\n",
-      "Data columns (total 31 columns):\n",
-      " #   Column       Non-Null Count  Dtype  \n",
-      "---  ------       --------------  -----  \n",
-      " 0   age          59946 non-null  int64  \n",
-      " 1   body_type    54650 non-null  object \n",
-      " 2   diet         35551 non-null  object \n",
-      " 3   drinks       56961 non-null  object \n",
-      " 4   drugs        45866 non-null  object \n",
-      " 5   education    53318 non-null  object \n",
-      " 6   essay0       54458 non-null  object \n",
-      " 7   essay1       52374 non-null  object \n",
-      " 8   essay2       50308 non-null  object \n",
-      " 9   essay3       48470 non-null  object \n",
-      " 10  essay4       49409 non-null  object \n",
-      " 11  essay5       49096 non-null  object \n",
-      " 12  essay6       46175 non-null  object \n",
-      " 13  essay7       47495 non-null  object \n",
-      " 14  essay8       40721 non-null  object \n",
-      " 15  essay9       47343 non-null  object \n",
-      " 16  ethnicity    54266 non-null  object \n",
-      " 17  height       59943 non-null  float64\n",
-      " 18  income       59946 non-null  int64  \n",
-      " 19  job          51748 non-null  object \n",
-      " 20  last_online  59946 non-null  object \n",
-      " 21  location     59946 non-null  object \n",
-      " 22  offspring    24385 non-null  object \n",
-      " 23  orientation  59946 non-null  object \n",
-      " 24  pets         40025 non-null  object \n",
-      " 25  religion     39720 non-null  object \n",
-      " 26  sex          59946 non-null  object \n",
-      " 27  sign         48890 non-null  object \n",
-      " 28  smokes       54434 non-null  object \n",
-      " 29  speaks       59896 non-null  object \n",
-      " 30  status       59946 non-null  object \n",
-      "dtypes: float64(1), int64(2), object(28)\n",
-      "memory usage: 14.2+ MB\n",
-      "None\n",
-      "age                0\n",
-      "body_type       5296\n",
-      "diet           24395\n",
-      "drinks          2985\n",
-      "drugs          14080\n",
-      "education       6628\n",
-      "essay0          5488\n",
-      "essay1          7572\n",
-      "essay2          9638\n",
-      "essay3         11476\n",
-      "essay4         10537\n",
-      "essay5         10850\n",
-      "essay6         13771\n",
-      "essay7         12451\n",
-      "essay8         19225\n",
-      "essay9         12603\n",
-      "ethnicity       5680\n",
-      "height             3\n",
-      "income             0\n",
-      "job             8198\n",
-      "last_online        0\n",
-      "location           0\n",
       "offspring      35561\n",
-      "orientation        0\n",
-      "pets           19921\n",
+      "diet           24395\n",
       "religion       20226\n",
-      "sex                0\n",
+      "pets           19921\n",
+      "drugs          14080\n",
       "sign           11056\n",
+      "job             8198\n",
+      "education       6628\n",
+      "ethnicity       5680\n",
       "smokes          5512\n",
+      "body_type       5296\n",
+      "drinks          2985\n",
       "speaks            50\n",
+      "height             3\n",
+      "age                0\n",
+      "sex                0\n",
+      "location           0\n",
+      "orientation        0\n",
+      "last_online        0\n",
+      "essay9             0\n",
+      "income             0\n",
+      "essay8             0\n",
+      "essay7             0\n",
+      "essay6             0\n",
+      "essay5             0\n",
+      "essay4             0\n",
+      "essay3             0\n",
+      "essay2             0\n",
+      "essay1             0\n",
+      "essay0             0\n",
       "status             0\n",
       "dtype: int64\n",
-      "0        False\n",
-      "1        False\n",
-      "2        False\n",
-      "3        False\n",
-      "4        False\n",
-      "         ...  \n",
-      "59941    False\n",
-      "59942    False\n",
-      "59943    False\n",
-      "59944    False\n",
-      "59945    False\n",
-      "Length: 59946, dtype: bool\n"
+      "offspring      35559\n",
+      "diet           24392\n",
+      "religion       20223\n",
+      "pets           19919\n",
+      "drugs          14078\n",
+      "sign           11054\n",
+      "job             8196\n",
+      "education       6625\n",
+      "ethnicity       5679\n",
+      "smokes          5510\n",
+      "body_type       5293\n",
+      "drinks          2982\n",
+      "speaks            50\n",
+      "age                0\n",
+      "sex                0\n",
+      "location           0\n",
+      "orientation        0\n",
+      "last_online        0\n",
+      "essay9             0\n",
+      "income             0\n",
+      "height             0\n",
+      "essay8             0\n",
+      "essay7             0\n",
+      "essay6             0\n",
+      "essay5             0\n",
+      "essay4             0\n",
+      "essay3             0\n",
+      "essay2             0\n",
+      "essay1             0\n",
+      "essay0             0\n",
+      "status             0\n",
+      "dtype: int64\n",
+      "Index(['body_type', 'diet', 'drinks', 'drugs', 'education', 'essay0', 'essay1',\n",
+      "       'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7', 'essay8',\n",
+      "       'essay9', 'ethnicity', 'job', 'last_online', 'location', 'offspring',\n",
+      "       'orientation', 'pets', 'religion', 'sex', 'sign', 'smokes', 'speaks',\n",
+      "       'status'],\n",
+      "      dtype='object')\n",
+      "age            0\n",
+      "ethnicity      0\n",
+      "speaks         0\n",
+      "smokes         0\n",
+      "sign           0\n",
+      "sex            0\n",
+      "religion       0\n",
+      "pets           0\n",
+      "orientation    0\n",
+      "offspring      0\n",
+      "location       0\n",
+      "last_online    0\n",
+      "job            0\n",
+      "income         0\n",
+      "height         0\n",
+      "essay9         0\n",
+      "body_type      0\n",
+      "essay8         0\n",
+      "essay7         0\n",
+      "essay6         0\n",
+      "essay5         0\n",
+      "essay4         0\n",
+      "essay3         0\n",
+      "essay2         0\n",
+      "essay1         0\n",
+      "essay0         0\n",
+      "education      0\n",
+      "drugs          0\n",
+      "drinks         0\n",
+      "diet           0\n",
+      "status         0\n",
+      "dtype: int64\n",
+      "   age       body_type               diet    drinks      drugs  \\\n",
+      "0   22  a little extra  strictly anything  socially      never   \n",
+      "1   35         average       mostly other     often  sometimes   \n",
+      "2   38            thin           anything  socially     unkown   \n",
+      "3   23            thin         vegetarian  socially     unkown   \n",
+      "4   29        athletic             unkown  socially      never   \n",
+      "\n",
+      "                           education  \\\n",
+      "0      working on college/university   \n",
+      "1              working on space camp   \n",
+      "2     graduated from masters program   \n",
+      "3      working on college/university   \n",
+      "4  graduated from college/university   \n",
+      "\n",
+      "                                              essay0  \\\n",
+      "0  about me:<br />\\n<br />\\ni would love to think...   \n",
+      "1  i am a chef: this is what that means.<br />\\n1...   \n",
+      "2  i'm not ashamed of much, but writing public te...   \n",
+      "3          i work in a library and go to school. . .   \n",
+      "4  hey how's it going? currently vague on the pro...   \n",
+      "\n",
+      "                                              essay1  \\\n",
+      "0  currently working as an international agent fo...   \n",
+      "1  dedicating everyday to being an unbelievable b...   \n",
+      "2  i make nerdy software for musicians, artists, ...   \n",
+      "3          reading things written by old dead people   \n",
+      "4                         work work work work + play   \n",
+      "\n",
+      "                                              essay2  \\\n",
+      "0  making people laugh.<br />\\nranting about a go...   \n",
+      "1  being silly. having ridiculous amonts of fun w...   \n",
+      "2  improvising in different contexts. alternating...   \n",
+      "3  playing synthesizers and organizing books acco...   \n",
+      "4  creating imagery to look at:<br />\\nhttp://bag...   \n",
+      "\n",
+      "                                              essay3  ...  \\\n",
+      "0  the way i look. i am a six foot half asian, ha...  ...   \n",
+      "1                                                     ...   \n",
+      "2  my large jaw and large glasses are the physica...  ...   \n",
+      "3                  socially awkward but i do my best  ...   \n",
+      "4            i smile a lot and my inquisitive nature  ...   \n",
+      "\n",
+      "                          location  \\\n",
+      "0  south san francisco, california   \n",
+      "1              oakland, california   \n",
+      "2        san francisco, california   \n",
+      "3             berkeley, california   \n",
+      "4        san francisco, california   \n",
+      "\n",
+      "                                      offspring orientation  \\\n",
+      "0  doesn&rsquo;t have kids, but might want them    straight   \n",
+      "1  doesn&rsquo;t have kids, but might want them    straight   \n",
+      "2                                        unkown    straight   \n",
+      "3                       doesn&rsquo;t want kids    straight   \n",
+      "4                                        unkown    straight   \n",
+      "\n",
+      "                        pets                                  religion sex  \\\n",
+      "0  likes dogs and likes cats     agnosticism and very serious about it   m   \n",
+      "1  likes dogs and likes cats  agnosticism but not too serious about it   m   \n",
+      "2                   has cats                                    unkown   m   \n",
+      "3                 likes cats                                    unkown   m   \n",
+      "4  likes dogs and likes cats                                    unkown   m   \n",
+      "\n",
+      "                                 sign     smokes  \\\n",
+      "0                              gemini  sometimes   \n",
+      "1                              cancer         no   \n",
+      "2  pisces but it doesn&rsquo;t matter         no   \n",
+      "3                              pisces         no   \n",
+      "4                            aquarius         no   \n",
+      "\n",
+      "                                              speaks     status  \n",
+      "0                                            english     single  \n",
+      "1  english (fluently), spanish (poorly), french (...     single  \n",
+      "2                               english, french, c++  available  \n",
+      "3                           english, german (poorly)     single  \n",
+      "4                                            english     single  \n",
+      "\n",
+      "[5 rows x 31 columns]\n"
      ]
     }
    ],
@@ -112,12 +200,29 @@
     "data = pd.read_csv('profiles.csv')\n",
     "#EDA\n",
     "#print(data.head())\n",
-    "print(data.describe())\n",
-    "print(data.info())\n",
+    "#print(data.describe())\n",
+    "#print(data.info())\n",
     "#print(data.shape)\n",
+    "#print(data.duplicated())\n",
+    "#data.isnull().mean().sort_values(ascending=False)  # for percentage\n",
+    "#data.isnull().sum().sort_values(ascending=False)\n",
     "\n",
-    "print(data.isnull().sum())\n",
-    "print(data.duplicated())"
+    "#fill null essays with empty string\n",
+    "essay_cols = [col for col in data.columns if 'essay' in col]\n",
+    "data[essay_cols] = data[essay_cols].fillna('')\n",
+    "print(data.isnull().sum().sort_values(ascending=False))\n",
+    "\n",
+    "#drop 3 records without height (was thinking about filling those values with the mean, but since there are only 3 rows, decided to drop them)\n",
+    "data = data.dropna(subset=['height'])\n",
+    "print(data.isnull().sum().sort_values(ascending=False))\n",
+    "\n",
+    "#fill categorical columns with unkown\n",
+    "cat_cols = data.select_dtypes(include=['object', 'category']).columns\n",
+    "print(cat_cols)\n",
+    "data[cat_cols] = data[cat_cols].fillna('unkown')\n",
+    "print(data.isnull().sum().sort_values(ascending=False))\n",
+    "\n",
+    "print(data.head())\n"
    ]
   }
  ],
