--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 81,
    "metadata": {
     "scrolled": true
    },
@@ -11,186 +11,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "offspring      35561\n",
-      "diet           24395\n",
-      "religion       20226\n",
-      "pets           19921\n",
-      "drugs          14080\n",
-      "sign           11056\n",
-      "job             8198\n",
-      "education       6628\n",
-      "ethnicity       5680\n",
-      "smokes          5512\n",
-      "body_type       5296\n",
-      "drinks          2985\n",
-      "speaks            50\n",
-      "height             3\n",
-      "age                0\n",
-      "sex                0\n",
-      "location           0\n",
-      "orientation        0\n",
-      "last_online        0\n",
-      "essay9             0\n",
-      "income             0\n",
-      "essay8             0\n",
-      "essay7             0\n",
-      "essay6             0\n",
-      "essay5             0\n",
-      "essay4             0\n",
-      "essay3             0\n",
-      "essay2             0\n",
-      "essay1             0\n",
-      "essay0             0\n",
-      "status             0\n",
-      "dtype: int64\n",
-      "offspring      35559\n",
-      "diet           24392\n",
-      "religion       20223\n",
-      "pets           19919\n",
-      "drugs          14078\n",
-      "sign           11054\n",
-      "job             8196\n",
-      "education       6625\n",
-      "ethnicity       5679\n",
-      "smokes          5510\n",
-      "body_type       5293\n",
-      "drinks          2982\n",
-      "speaks            50\n",
-      "age                0\n",
-      "sex                0\n",
-      "location           0\n",
-      "orientation        0\n",
-      "last_online        0\n",
-      "essay9             0\n",
-      "income             0\n",
-      "height             0\n",
-      "essay8             0\n",
-      "essay7             0\n",
-      "essay6             0\n",
-      "essay5             0\n",
-      "essay4             0\n",
-      "essay3             0\n",
-      "essay2             0\n",
-      "essay1             0\n",
-      "essay0             0\n",
-      "status             0\n",
-      "dtype: int64\n",
       "Index(['body_type', 'diet', 'drinks', 'drugs', 'education', 'essay0', 'essay1',\n",
       "       'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7', 'essay8',\n",
       "       'essay9', 'ethnicity', 'job', 'last_online', 'location', 'offspring',\n",
       "       'orientation', 'pets', 'religion', 'sex', 'sign', 'smokes', 'speaks',\n",
       "       'status'],\n",
       "      dtype='object')\n",
-      "age            0\n",
-      "ethnicity      0\n",
-      "speaks         0\n",
-      "smokes         0\n",
-      "sign           0\n",
-      "sex            0\n",
-      "religion       0\n",
-      "pets           0\n",
-      "orientation    0\n",
-      "offspring      0\n",
-      "location       0\n",
-      "last_online    0\n",
-      "job            0\n",
-      "income         0\n",
-      "height         0\n",
-      "essay9         0\n",
-      "body_type      0\n",
-      "essay8         0\n",
-      "essay7         0\n",
-      "essay6         0\n",
-      "essay5         0\n",
-      "essay4         0\n",
-      "essay3         0\n",
-      "essay2         0\n",
-      "essay1         0\n",
-      "essay0         0\n",
-      "education      0\n",
-      "drugs          0\n",
-      "drinks         0\n",
-      "diet           0\n",
-      "status         0\n",
-      "dtype: int64\n",
-      "   age       body_type               diet    drinks      drugs  \\\n",
-      "0   22  a little extra  strictly anything  socially      never   \n",
-      "1   35         average       mostly other     often  sometimes   \n",
-      "2   38            thin           anything  socially     unkown   \n",
-      "3   23            thin         vegetarian  socially     unkown   \n",
-      "4   29        athletic             unkown  socially      never   \n",
-      "\n",
-      "                           education  \\\n",
-      "0      working on college/university   \n",
-      "1              working on space camp   \n",
-      "2     graduated from masters program   \n",
-      "3      working on college/university   \n",
-      "4  graduated from college/university   \n",
-      "\n",
-      "                                              essay0  \\\n",
-      "0  about me:<br />\\n<br />\\ni would love to think...   \n",
-      "1  i am a chef: this is what that means.<br />\\n1...   \n",
-      "2  i'm not ashamed of much, but writing public te...   \n",
-      "3          i work in a library and go to school. . .   \n",
-      "4  hey how's it going? currently vague on the pro...   \n",
-      "\n",
-      "                                              essay1  \\\n",
-      "0  currently working as an international agent fo...   \n",
-      "1  dedicating everyday to being an unbelievable b...   \n",
-      "2  i make nerdy software for musicians, artists, ...   \n",
-      "3          reading things written by old dead people   \n",
-      "4                         work work work work + play   \n",
-      "\n",
-      "                                              essay2  \\\n",
-      "0  making people laugh.<br />\\nranting about a go...   \n",
-      "1  being silly. having ridiculous amonts of fun w...   \n",
-      "2  improvising in different contexts. alternating...   \n",
-      "3  playing synthesizers and organizing books acco...   \n",
-      "4  creating imagery to look at:<br />\\nhttp://bag...   \n",
-      "\n",
-      "                                              essay3  ...  \\\n",
-      "0  the way i look. i am a six foot half asian, ha...  ...   \n",
-      "1                                                     ...   \n",
-      "2  my large jaw and large glasses are the physica...  ...   \n",
-      "3                  socially awkward but i do my best  ...   \n",
-      "4            i smile a lot and my inquisitive nature  ...   \n",
-      "\n",
-      "                          location  \\\n",
-      "0  south san francisco, california   \n",
-      "1              oakland, california   \n",
-      "2        san francisco, california   \n",
-      "3             berkeley, california   \n",
-      "4        san francisco, california   \n",
-      "\n",
-      "                                      offspring orientation  \\\n",
-      "0  doesn&rsquo;t have kids, but might want them    straight   \n",
-      "1  doesn&rsquo;t have kids, but might want them    straight   \n",
-      "2                                        unkown    straight   \n",
-      "3                       doesn&rsquo;t want kids    straight   \n",
-      "4                                        unkown    straight   \n",
-      "\n",
-      "                        pets                                  religion sex  \\\n",
-      "0  likes dogs and likes cats     agnosticism and very serious about it   m   \n",
-      "1  likes dogs and likes cats  agnosticism but not too serious about it   m   \n",
-      "2                   has cats                                    unkown   m   \n",
-      "3                 likes cats                                    unkown   m   \n",
-      "4  likes dogs and likes cats                                    unkown   m   \n",
-      "\n",
-      "                                 sign     smokes  \\\n",
-      "0                              gemini  sometimes   \n",
-      "1                              cancer         no   \n",
-      "2  pisces but it doesn&rsquo;t matter         no   \n",
-      "3                              pisces         no   \n",
-      "4                            aquarius         no   \n",
-      "\n",
-      "                                              speaks     status  \n",
-      "0                                            english     single  \n",
-      "1  english (fluently), spanish (poorly), french (...     single  \n",
-      "2                               english, french, c++  available  \n",
-      "3                           english, german (poorly)     single  \n",
-      "4                                            english     single  \n",
-      "\n",
-      "[5 rows x 31 columns]\n"
+      "['working on college/university' 'working on space camp'\n",
+      " 'graduated from masters program' 'graduated from college/university'\n",
+      " 'working on two-year college' 'unknown' 'graduated from high school'\n",
+      " 'working on masters program' 'graduated from space camp'\n",
+      " 'college/university' 'dropped out of space camp'\n",
+      " 'graduated from ph.d program' 'graduated from law school'\n",
+      " 'working on ph.d program' 'two-year college'\n",
+      " 'graduated from two-year college' 'working on med school'\n",
+      " 'dropped out of college/university' 'space camp'\n",
+      " 'graduated from med school' 'dropped out of high school'\n",
+      " 'working on high school' 'masters program' 'dropped out of ph.d program'\n",
+      " 'dropped out of two-year college' 'dropped out of med school'\n",
+      " 'high school' 'working on law school' 'law school'\n",
+      " 'dropped out of masters program' 'ph.d program'\n",
+      " 'dropped out of law school' 'med school']\n",
+      "['working on' 'graduated from' 'unknown' 'neutral' 'dropped out']\n",
+      "['college/university' 'space camp' 'masters program' 'two-year college'\n",
+      " 'unknown' 'high school' 'of space camp' 'ph.d program' 'law school'\n",
+      " 'med school' 'of college/university' 'of high school' 'of ph.d program'\n",
+      " 'of two-year college' 'of med school' 'of masters program'\n",
+      " 'of law school']\n"
      ]
     }
    ],
@@ -198,7 +45,9 @@
     "import pandas as pd\n",
     "\n",
     "data = pd.read_csv('profiles.csv')\n",
+    "\n",
     "#EDA\n",
+    "\n",
     "#print(data.head())\n",
     "#print(data.describe())\n",
     "#print(data.info())\n",
@@ -210,19 +59,98 @@
     "#fill null essays with empty string\n",
     "essay_cols = [col for col in data.columns if 'essay' in col]\n",
     "data[essay_cols] = data[essay_cols].fillna('')\n",
-    "print(data.isnull().sum().sort_values(ascending=False))\n",
     "\n",
     "#drop 3 records without height (was thinking about filling those values with the mean, but since there are only 3 rows, decided to drop them)\n",
     "data = data.dropna(subset=['height'])\n",
-    "print(data.isnull().sum().sort_values(ascending=False))\n",
     "\n",
     "#fill categorical columns with unkown\n",
     "cat_cols = data.select_dtypes(include=['object', 'category']).columns\n",
     "print(cat_cols)\n",
-    "data[cat_cols] = data[cat_cols].fillna('unkown')\n",
-    "print(data.isnull().sum().sort_values(ascending=False))\n",
+    "data[cat_cols] = data[cat_cols].fillna('unknown')\n",
     "\n",
-    "print(data.head())\n"
+    "#print(data.isnull().sum().sort_values(ascending=False))\n",
+    "#print(data.head())\n",
+    "\n",
+    "#group body types - Group body types into slim, average, fit, plus or unknown\n",
+    "def group_body_types(bt):\n",
+    "    if bt in ['thin', 'skinny']:\n",
+    "        return 'slim'\n",
+    "    elif bt == 'average':\n",
+    "        return 'average'\n",
+    "    elif bt in ['athletic', 'fit', 'jacked']: \n",
+    "        return 'fit'\n",
+    "    elif bt in ['a little extra', 'curvy', 'full figured', 'overweight']: \n",
+    "        return 'plus'\n",
+    "    else:\n",
+    "        return 'unknown'\n",
+    "\n",
+    "data.body_type = data.body_type.apply(group_body_types)\n",
+    "\n",
+    "#Diet - for diet there are 2 pieces of info in this column, so I will divide into diet type and diet strictness\n",
+    "def fill_diet_type(diet):\n",
+    "    parts = diet.split(' ')\n",
+    "    if len(parts) == 1:\n",
+    "        return parts[0]\n",
+    "    else:\n",
+    "        return parts[1]\n",
+    "    \n",
+    "data['diet_type'] = data['diet'].apply(fill_diet_type)\n",
+    "\n",
+    "def fill_diet_strictness(diet):\n",
+    "    parts = diet.split(' ')\n",
+    "    if len(parts) == 1 and parts[0] == 'unknown':\n",
+    "        return 'unknown'\n",
+    "    elif len(parts) == 1: \n",
+    "        return 'neutral'\n",
+    "    else:\n",
+    "        return parts[0]\n",
+    "\n",
+    "data['diet_strictness'] = data['diet'].apply(fill_diet_strictness)\n",
+    "\n",
+    "strict_dict = {\n",
+    "    'strictly': 'strict',\n",
+    "    'mostly': 'flexible',\n",
+    "    'neutral': 'standard',\n",
+    "    'unknown': 'unknown'\n",
+    "}\n",
+    "\n",
+    "data['diet_strictness'] = data['diet_strictness'].map(strict_dict)\n",
+    "\n",
+    "#drinks - almost perfect, just changed some labels and grouped 2 fields\n",
+    "drinks_dict = {\n",
+    "    'unknown': 'unknown',\n",
+    "    'not at all': 'non-drinker',\n",
+    "    'rarely': 'light',\n",
+    "    'socially': 'moderate',\n",
+    "    'often': 'heavy',\n",
+    "    'very often': 'heavy',\n",
+    "    'desperately': 'very heavy',    \n",
+    "}\n",
+    "\n",
+    "data.drinks = data.drinks.map(drinks_dict)\n",
+    "\n",
+    "#drugs - good to go\n",
+    "#education - STILL NEEDS TO BE PROPER CLEANED CHECK THE UNIQUE VALUES AND GROUP THEM AFTER FINISHING CLEANING\n",
+    "\n",
+    "print(data.education.unique())\n",
+    "\n",
+    "def split_education(edu): \n",
+    "    if edu is None or pd.isna(edu) or edu == 'unknown' or edu == '':\n",
+    "        return pd.Series(['unknown', 'unknown'])\n",
+    "    parts = edu.split(' ', 2)\n",
+    "    if len(parts) == 1:\n",
+    "        return pd.Series(['neutral', parts[0]])\n",
+    "    if len(parts) == 2:\n",
+    "        return pd.Series(['neutral', parts[0] + ' ' + parts[1]])\n",
+    "    if len(parts) == 3:\n",
+    "        status = parts[0] + ' ' + parts[1]\n",
+    "        level = parts[2]\n",
+    "        return pd.Series([status, level])\n",
+    "\n",
+    "data[['education_status', 'education_level']] = data['education'].apply(split_education)\n",
+    "\n",
+    "print(data.education_status.unique())\n",
+    "print(data.education_level.unique())"
    ]
   }
  ],
