--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,45 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['body_type', 'diet', 'drinks', 'drugs', 'education', 'essay0', 'essay1',\n",
-      "       'essay2', 'essay3', 'essay4', 'essay5', 'essay6', 'essay7', 'essay8',\n",
-      "       'essay9', 'ethnicity', 'job', 'last_online', 'location', 'offspring',\n",
-      "       'orientation', 'pets', 'religion', 'sex', 'sign', 'smokes', 'speaks',\n",
-      "       'status'],\n",
-      "      dtype='object')\n",
-      "['working on college/university' 'working on space camp'\n",
-      " 'graduated from masters program' 'graduated from college/university'\n",
-      " 'working on two-year college' 'unknown' 'graduated from high school'\n",
-      " 'working on masters program' 'graduated from space camp'\n",
-      " 'college/university' 'dropped out of space camp'\n",
-      " 'graduated from ph.d program' 'graduated from law school'\n",
-      " 'working on ph.d program' 'two-year college'\n",
-      " 'graduated from two-year college' 'working on med school'\n",
-      " 'dropped out of college/university' 'space camp'\n",
-      " 'graduated from med school' 'dropped out of high school'\n",
-      " 'working on high school' 'masters program' 'dropped out of ph.d program'\n",
-      " 'dropped out of two-year college' 'dropped out of med school'\n",
-      " 'high school' 'working on law school' 'law school'\n",
-      " 'dropped out of masters program' 'ph.d program'\n",
-      " 'dropped out of law school' 'med school']\n",
-      "['working on' 'graduated from' 'unknown' 'neutral' 'dropped out']\n",
-      "['college/university' 'space camp' 'masters program' 'two-year college'\n",
-      " 'unknown' 'high school' 'of space camp' 'ph.d program' 'law school'\n",
-      " 'med school' 'of college/university' 'of high school' 'of ph.d program'\n",
-      " 'of two-year college' 'of med school' 'of masters program'\n",
-      " 'of law school']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -132,16 +98,16 @@
     "#drugs - good to go\n",
     "#education - STILL NEEDS TO BE PROPER CLEANED CHECK THE UNIQUE VALUES AND GROUP THEM AFTER FINISHING CLEANING\n",
     "\n",
-    "print(data.education.unique())\n",
+    "#print(data.education.unique())\n",
     "\n",
     "def split_education(edu): \n",
     "    if edu is None or pd.isna(edu) or edu == 'unknown' or edu == '':\n",
     "        return pd.Series(['unknown', 'unknown'])\n",
     "    parts = edu.split(' ', 2)\n",
     "    if len(parts) == 1:\n",
-    "        return pd.Series(['neutral', parts[0]])\n",
+    "        return pd.Series(['graduated from', parts[0]])\n",
     "    if len(parts) == 2:\n",
-    "        return pd.Series(['neutral', parts[0] + ' ' + parts[1]])\n",
+    "        return pd.Series(['graduated from', parts[0] + ' ' + parts[1]])\n",
     "    if len(parts) == 3:\n",
     "        status = parts[0] + ' ' + parts[1]\n",
     "        level = parts[2]\n",
@@ -149,8 +115,101 @@
     "\n",
     "data[['education_status', 'education_level']] = data['education'].apply(split_education)\n",
     "\n",
-    "print(data.education_status.unique())\n",
-    "print(data.education_level.unique())"
+    "map_edu = {\n",
+    "    'college/university': 'college',\n",
+    "    'space camp': 'unknown',\n",
+    "    'masters program': 'masters',\n",
+    "    'two-year college': 'college',\n",
+    "    'unknown': 'unknown',\n",
+    "    'high school': 'high school',\n",
+    "    'of space camp': 'unknown',\n",
+    "    'ph.d program': 'phd',\n",
+    "    'law school': 'law school',\n",
+    "    'med school': 'med school',\n",
+    "    'of college/university': 'college',\n",
+    "    'of high school': 'high school',\n",
+    "    'of ph.d program': 'phd',\n",
+    "    'of two-year college': 'college',\n",
+    "    'of med school': 'med school',\n",
+    "    'of masters program': 'masters',\n",
+    "    'of law school': 'law school'\n",
+    "}\n",
+    "\n",
+    "edu_status_map = {\n",
+    "    'working on': 'in progress',\n",
+    "    'graduated from': 'finished',\n",
+    "    'unknown': 'unknown',\n",
+    "    'dropped out': 'dropped out'\n",
+    "}\n",
+    "\n",
+    "data['education_level'] = data['education_level'].map(map_edu)\n",
+    "data['education_status'] = data['education_status'].map(edu_status_map)\n",
+    "\n",
+    "#print(data.education_status.unique())\n",
+    "#print(data.education_level.unique())\n",
+    "\n",
+    "#ethnicity\n",
+    "#print(data.ethnicity.unique())\n",
+    "\n",
+    "def get_primary_race(race):\n",
+    "    if race == '' or race == 'unknown':\n",
+    "        return 'unknown'\n",
+    "    else:\n",
+    "        return race.split(',')[0].strip().lower()\n",
+    "\n",
+    "data['ethnicity'] = data['ethnicity'].apply(get_primary_race)\n",
+    "\n",
+    "#print(data.ethnicity.unique())\n",
+    "\n",
+    "#job\n",
+    "#print(data.job.unique())\n",
+    "\n",
+    "career_map = {\n",
+    "    'science / tech / engineering': 'STEM',\n",
+    "    'computer / hardware / software': 'STEM',\n",
+    "    \n",
+    "    'medicine / health': 'Healthcare',\n",
+    "    \n",
+    "    'education / academia': 'Education',\n",
+    "    \n",
+    "    'banking / financial / real estate': 'Business',\n",
+    "    'sales / marketing / biz dev': 'Business',\n",
+    "    'executive / management': 'Business',\n",
+    "    \n",
+    "    'artistic / musical / writer': 'Creative',\n",
+    "    'entertainment / media': 'Creative',\n",
+    "    \n",
+    "    'hospitality / travel': 'Service',\n",
+    "    'clerical / administrative': 'Service',\n",
+    "    'construction / craftsmanship': 'Service',\n",
+    "    \n",
+    "    'political / government': 'Government / Law',\n",
+    "    'law / legal services': 'Government / Law',\n",
+    "    'military': 'Government / Law',\n",
+    "    \n",
+    "    'transportation': 'Transportation',\n",
+    "    \n",
+    "    'student': 'Student',\n",
+    "    'unemployed': 'Unemployed',\n",
+    "    'retired': 'Retired',\n",
+    "    \n",
+    "    'rather not say': 'Other',\n",
+    "    'other': 'Other',\n",
+    "    'unknown': 'Other'\n",
+    "}\n",
+    "\n",
+    "data['job'] = data['job'].map(career_map).fillna('Other')\n",
+    "\n",
+    "#print(data.job.unique())\n",
+    "\n",
+    "#last_online\n",
+    "print(data.last_online.unique())\n",
+    "\n",
+    "data['last_online'] = pd.to_datetime(data['last_online'], format='%Y-%m-%d-%H-%M')\n",
+    "most_recent_date = data['last_online'].max()\n",
+    "data['last_online'] = (most_recent_date - data['last_online']).dt.days\n",
+    "\n",
+    "#OPTIONAL - CONVERT TO CATEGORIES (ACTIVE, SEMI ACTIVE, NOT ACTIVE, etc...)\n"
    ]
   }
  ],
