--- a/date-a-scientist.ipynb
+++ b/date-a-scientist.ipynb
@@ -2,11 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'pandas'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      3\u001b[39m data = pd.read_csv(\u001b[33m'\u001b[39m\u001b[33mprofiles.csv\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      5\u001b[39m \u001b[38;5;66;03m#EDA\u001b[39;00m\n\u001b[32m      6\u001b[39m \n\u001b[32m      7\u001b[39m \u001b[38;5;66;03m#print(data.head())\u001b[39;00m\n\u001b[32m   (...)\u001b[39m\u001b[32m     14\u001b[39m \n\u001b[32m     15\u001b[39m \u001b[38;5;66;03m#fill null essays with empty string\u001b[39;00m\n",
+      "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -209,15 +221,28 @@
     "most_recent_date = data['last_online'].max()\n",
     "data['last_online'] = (most_recent_date - data['last_online']).dt.days\n",
     "\n",
+    "def convert_lastonline_cat(dt):\n",
+    "    if dt <= 7:\n",
+    "        'active'\n",
+    "    elif dt > 7 and dt <14:\n",
+    "        'semi-active'\n",
+    "    else:\n",
+    "        'inactive'\n",
+    "\n",
+    "data['activity_status'] = data.last_online.apply(convert_lastonline_cat)\n",
+    "\n",
+    "print(data['activity_status'].head())\n",
+    "        \n",
+    "\n",
     "#OPTIONAL - CONVERT TO CATEGORIES (ACTIVE, SEMI ACTIVE, NOT ACTIVE, etc...)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -229,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
